Started the Text to Speech Funcionality

--- a/Microsoft.Cse.SpeechToSpeech.UI/MainWindow.xaml
+++ b/Microsoft.Cse.SpeechToSpeech.UI/MainWindow.xaml
@@ -211,6 +211,8 @@
                                         <StackPanel Margin="10">
                                             <TextBlock Text="Subscription Key:" />
                                             <TextBox VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Padding="2" Text="{Binding SubscriptionKey}" ToolTip="{Binding Text, RelativeSource={RelativeSource Self}}"/>
+                                            <TextBlock Text="Speech Subscription Key:" />
+                                            <TextBox VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Padding="2" Text="{Binding SpeechSubscriptionKey}" ToolTip="{Binding Text, RelativeSource={RelativeSource Self}}"/>
                                         </StackPanel>
                                     </Expander>
                                     <Expander Header="Languages" IsExpanded="True" Margin="10,10,10,0" >
