--- a/Microsoft.Cse.SpeechToSpeech.UI/MainWindow.xaml
+++ b/Microsoft.Cse.SpeechToSpeech.UI/MainWindow.xaml
@@ -96,6 +96,15 @@
                                                 ToolTip="{Binding Text, RelativeSource={RelativeSource Self}}"  />
 
                                             </StackPanel>
+                                            <TextBlock TextWrapping="Wrap" Margin="10,0,0,0"><Run Text="Output folder for audio files"/></TextBlock>
+                                            <Grid Margin="10">
+                                                <Grid.ColumnDefinitions>
+                                                    <ColumnDefinition Width="*"/>
+                                                    <ColumnDefinition Width="Auto"/>
+                                                </Grid.ColumnDefinitions>
+                                                <TextBox x:Name="audioOutputPathAudio" IsEnabled="False" TextWrapping="Wrap" Margin="0,0,5,0" AutomationProperties.HelpText="c:\myfolder"/>
+                                                <Button x:Name="audioOutputAudio" Content="..." d:LayoutOverrides="Width, Height" Grid.Column="1" Click="OnAudioOutputTranslationClick"/>
+                                            </Grid>
                                         </StackPanel>
                                     </Expander>
 
