--- a/Microsoft.Cse.SpeechToSpeech.UI/MainWindow.xaml
+++ b/Microsoft.Cse.SpeechToSpeech.UI/MainWindow.xaml
@@ -73,17 +73,9 @@
                                     <Expander  Header="Speech API config" Margin="10,10,10,0" IsExpanded="{Binding ShowSpeechApiConfigOnStartup, Mode=OneTime}">
                                         <StackPanel Margin="10">
                                             <TextBlock TextWrapping="Wrap" Text="Azure region" Margin="0,0,0,0"/>
-                                            <ComboBox  x:Name="regionComboBox" Text="Select Region" AllowDrop="True" ItemsSource="{Binding Regions}" SelectedItem="{Binding CustomModelEndpointId, Converter={StaticResource ComboBoxValueConverter}}" />
-                                            <TextBlock Text="Subscription Key:" />
-                                            <TextBox VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Padding="2" Text="{Binding SubscriptionKey}" ToolTip="{Binding Text, RelativeSource={RelativeSource Self}}"/>
-                                            <StackPanel Visibility="{Binding IsChecked, Converter={StaticResource b2v}, ElementName=bothRadioButton}" >
-                                                <TextBlock Text="CRIS Model ID:"/>
-                                                <TextBox VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Padding="2" Text="{Binding CustomModelEndpointId, ElementName=mainWindow, Mode=TwoWay}" ToolTip="{Binding Text, RelativeSource={RelativeSource Self}}"/>
-                                            </StackPanel>
-                                            <StackPanel Visibility="{Binding IsChecked, Converter={StaticResource b2v}, ElementName=customRadioButton}" >
-                                                <TextBlock Text="CRIS Model ID:"/>
-                                                <TextBox VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Padding="2" Text="{Binding CustomModelEndpointId, ElementName=mainWindow, Mode=TwoWay}" ToolTip="{Binding Text, RelativeSource={RelativeSource Self}}"/>
-                                            </StackPanel>
+                                            <ComboBox  x:Name="regionComboBox" Text="Select Region" AllowDrop="True" ItemsSource="{Binding Regions}" SelectedItem="{Binding Settings.CustomModelEndpointId, Converter={StaticResource ComboBoxValueConverter}}" />
+                                            <TextBlock Text="Speech Subscription Key:" />
+                                            <TextBox VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Padding="2" Text="{Binding Settings.SpeechSubscriptionKey}" ToolTip="{Binding Text, RelativeSource={RelativeSource Self}}"/>
                                         </StackPanel>
                                     </Expander>
                                     <Expander  Header="Input Source"  x:Name="radioGroup" Margin="10,10,10,0" IsExpanded="true">
@@ -105,14 +97,6 @@
                                                 <TextBox x:Name="audioOutputPathAudio" IsEnabled="False" TextWrapping="Wrap" Margin="0,0,5,0" AutomationProperties.HelpText="c:\myfolder"/>
                                                 <Button x:Name="audioOutputAudio" Content="..." d:LayoutOverrides="Width, Height" Grid.Column="1" Click="OnAudioOutputTranslationClick"/>
                                             </Grid>
-                                        </StackPanel>
-                                    </Expander>
-
-                                    <Expander Header="Recognition Type" x:Name="selectRecoType" Margin="10,10,10,0" IsEnabled="false">
-                                        <StackPanel Orientation="Vertical">
-                                            <RadioButton x:Name="basicRadioButton" IsChecked="{Binding UseBaseModel, ElementName=mainWindow}" Margin="10, 10, 0, 0" Click="OnInputButtonClick" Content="Baseline Model"/>
-                                            <RadioButton x:Name="customRadioButton" IsChecked="{Binding UseCustomModel, ElementName=mainWindow}" Margin="10, 10, 0, 0" Click="OnInputButtonClick" Content="Custom Model"/>
-                                            <RadioButton x:Name="bothRadioButton" IsChecked="{Binding UseBaseAndCustomModels, ElementName=mainWindow}" Margin="10, 10, 0, 0" Click="OnInputButtonClick" Content="Both"/>
                                         </StackPanel>
                                     </Expander>
                                     <Expander Header="Languages" IsExpanded="True" Margin="10,10,10,0" >
@@ -216,12 +200,12 @@
                                 </Expander.Header>
 
                                 <StackPanel>
-                                    <Expander  Header="Translation API config" Margin="10,10,10,0" IsExpanded="{Binding ShowSpeechApiConfigOnStartup, Mode=OneTime}">
+                                    <Expander  Header="Translation API config" Margin="10,10,10,0" IsExpanded="{Binding ShowTranslationApiConfigOnStartup, Mode=OneTime}">
                                         <StackPanel Margin="10">
-                                            <TextBlock Text="Subscription Key:" />
-                                            <TextBox VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Padding="2" Text="{Binding SubscriptionKey}" ToolTip="{Binding Text, RelativeSource={RelativeSource Self}}"/>
+                                            <TextBlock Text="Text Translation Subscription Key:" />
+                                            <TextBox VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Padding="2" Text="{Binding Settings.TextTranslationSubscriptionKey}" ToolTip="{Binding Text, RelativeSource={RelativeSource Self}}"/>
                                             <TextBlock Text="Speech Subscription Key:" />
-                                            <TextBox VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Padding="2" Text="{Binding SpeechSubscriptionKey}" ToolTip="{Binding Text, RelativeSource={RelativeSource Self}}"/>
+                                            <TextBox VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Padding="2" Text="{Binding Settings.SpeechSubscriptionKey}" ToolTip="{Binding Text, RelativeSource={RelativeSource Self}}"/>
                                         </StackPanel>
                                     </Expander>
                                     <Expander Header="Languages" IsExpanded="True" Margin="10,10,10,0" >
